--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -556,6 +556,8 @@ Similarly, a relationship can be drawn between this model \& Milgram et al.'s vi
 
 \section{Transitions in Parallel Reality}
 
+\label{transitions_in_parallel_reality}
+
 \newcommand{\breakinpresencefootnote}{\footnote{The definition of \textbf{break in presence} adopted herein is the second from Waterworth \& Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment \& toward absence, which also relates to a reduction in involvement. This differs to Slater \& Steed's original definition in~\cite{Slater2000} as they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth \& Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load \& the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the system developed in this thesis, which is concerned with intentionally \& willingly switching engagement between stimuli from both real \& virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.}}
 
 The novel aspect of a PR system is the ability it imparts upon its user to switch their locus of attention between equivalent vantage points in RW \& VR environments. In order to achieve the highest quality of experience with this style of interaction with a PR system, it is vital to determine how best to implement the transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning \& reduced perceptual processing) required to comprehend each transition, as increased cognitive load will detract from engagement with the environments \& reduce the user's willingness to perform subsequent transitions.
