--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -540,7 +540,7 @@ Similarly, a relationship can be drawn between this model \& Milgram et al.'s vi
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.7\textwidth]{focus-locus-sensus-with-virtuality-continuum.png}
+		\includegraphics[width=\textwidth]{focus-locus-sensus-with-virtuality-continuum-updated-with-grid.png}
 		\caption{The combined virtuality continuum/three dimensions of virtual experience model.}
 		\label{focus-locus-sensus-with-virtuality-continuum}
 	\end{center}	
@@ -588,7 +588,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=0.7\textwidth]{focus-locus-sensus-with-virtuality-continuum-with-transition-updated.png}
+		\includegraphics[width=\textwidth]{focus-locus-sensus-with-virtuality-continuum-with-transition-updated-with-grid.png}
 		\caption{Operation of a PR system represented upon the combined model.}
 		\label{focus-locus-sensus-with-virtuality-continuum-with-transition}
 	\end{center}	
